Thesis progress. New Diagrams and images.

--- a/Propuesta/proposal.tex
+++ b/Propuesta/proposal.tex
@@ -47,7 +47,7 @@ considerando un total de 41 videojuegos. Uno de ellos, Map Coloring, se trata so
 Se realizó una búsqueda del juego a la fecha (2022), pero no se encontró ningún material al respecto.
 
 Kiili y su equipo \cite{using_videogames_maths} analizaron el uso de videojuegos en enseñanza
-y evaluación en matemáticas a través de los títulos "Semideus" y "Wuzzit Trouble". A través
+y evaluación en matemáticas a través de los títulos ``Semideus'' y "Wuzzit Trouble". A través
 de estos, llegaron a la conclusión de que es posible utilizar videojuegos para enseñar y
 evaluar al mismo tiempo. Además, caracterizaron estadísticamente las diferencias producidas por el uso
 de videojuegos entre resultados de un pre test y un post test.
