--- a/Propuesta/proposal_short.tex
+++ b/Propuesta/proposal_short.tex
@@ -61,7 +61,7 @@ muestras pequeñas, además de que se trata principalmente de evaluaciones puram
 \cite{effectiveness_gbl}.
 
 Kiili y su equipo \cite{using_videogames_maths} analizaron el uso de videojuegos en enseñanza
-y evaluación en matemáticas a través de los títulos "Semideus" y "Wuzzit Trouble". A través
+y evaluación en matemáticas a través de los títulos ``Semideus'' y "Wuzzit Trouble". A través
 de estos, llegaron a la conclusión de que es posible utilizar videojuegos para enseñar y
 evaluar al mismo tiempo. Además, caracterizaron estadísticamente las diferencias producidas por el uso
 de videojuegos entre resultados de un pre test y un post test, concluyendo que existe una correlación positiva
