--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -24,12 +24,12 @@
   url={https://api.semanticscholar.org/CorpusID:85541524}
 }
 
-@misc{UN2023_ImpactDigitalTechnologies,
+@misc{UN2023ImpactDigitalTechnologies,
   author = {United Nations},
   title = {The Impact of Digital Technologies},
   year = {2023},
   url = {https://www.un.org/en/un75/impact-digital-technologies},
-  note = {Accessed: yyyy-mm-dd}
+  note = {Accessed: 2023-08-04}
 }
 
 @article{Bisson1996FunInLEarningPedagogicalRole,
@@ -118,4 +118,136 @@
   volume={59},
   pages={522 - 546},
   url={https://api.semanticscholar.org/CorpusID:228840833}
+}
+
+@misc{DCCPage, 
+author = {DCC},
+title = {Departamento de Ciencias de la Computación de la Universidad de Chile},  
+url = {https://dcc.uchile.cl/}, 
+note = {Accessed on 2023-09-27} 
+}
+
+@misc{CADCCPage,
+author = {CADCC},
+title = {Departamento de Ciencias de la Computación de la Universidad de Chile},  
+url = {https://cadcc.cl/junta-mechona-2021/}, 
+note = {Accessed on 2023-09-27} 
+}
+
+@misc{Wiki_Golden_Sun,
+  author = {Wikipedia contributors},
+  title = {Golden Sun (video game) Wikipedia, The Free Encyclopedia},
+  year = {2023},
+  url = {https://en.wikipedia.org/wiki/Golden_Sun_(video_game)},
+  note = {Accessed 04-October-2023}
+}
+
+@misc{FinalFantasyIV,
+  author = "{Wikipedia contributors}",
+  title = "Final Fantasy IV --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2023",
+  url = "https://en.wikipedia.org/w/index.php?title=Final_Fantasy_IV&oldid=1172844567",
+  note = "[Online; accessed 4-October-2023]"
+}
+
+@misc{PokemonEmerald,
+  author = "{Wikipedia contributors}",
+  title = "Pokémon Emerald --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2023",
+  url = "https://en.wikipedia.org/w/index.php?title=Pok%C3%A9mon_Emerald&oldid=1177495863",
+  note = "[Online; accessed 4-October-2023]"
+}
+
+@misc{ProtoCorgi,
+  author = "{Kemono Games}",
+  title = "ProtoCorgi",
+  year = "2023",
+  url = "https://kemono.games/game/ProtoCorgi",
+  note = "[Online; accessed 4-October-2023]"
+}
+
+@misc{SpaceInvaders,
+  author = "{Wikipedia contributors}",
+  title = "Space Invaders --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2023",
+  url = "https://en.wikipedia.org/w/index.php?title=Space_Invaders&oldid=1176573584",
+  note = "[Online; accessed 4-October-2023]"
+}
+
+
+@misc{GodotCollisionsAndRendering,
+  author = "{Godot Community}",
+  title = "Godot Official Documentation",
+  year = "2023",
+  url = "https://docs.godotengine.org/en/stable/tutorials/2d/2d_movement.html",
+  note = "[Online; accessed 4-October-2023]"
+}
+
+@misc{ReactSingleSourceOfTruth,
+  author = {React},
+  title = {Sharing State Between Components},
+  howpublished = {\url{https://react.dev/learn/sharing-state-between-components#a-single-source-of-truth-for-each-state}},
+  year = {2023},
+  note = {Accessed on 5 October 2023}
+}
+
+@inproceedings{Freeman2015TheMP,
+  title={The Mediator Pattern},
+  author={Adam Freeman},
+  year={2015},
+  url={https://api.semanticscholar.org/CorpusID:60321655}
+}
+}
+
+@misc{GodotExportVariables,
+  author = {Godot Community},
+  title = {Godot Export Variables},
+  year = {2023},
+  url = {https://docs.godotengine.org/en/stable/tutorials/scripting/gdscript/gdscript_exports.html},
+  note = {Accessed on 5 October 2023}
+}
+
+@article{IdentifyingStudentDifficultiesDataStructures,
+  title={Identifying Student Difficulties with Basic Data Structures},
+  author={Daniel Zingaro and Cynthia Bagier Taylor and Leo Porter and Michael J. Clancy and Cynthia Bailey Lee and Soohyun Nam Liao and Kevin C. Webb},
+  journal={Proceedings of the 2018 ACM Conference on International Computing Education Research},
+  year={2018},
+  url={https://api.semanticscholar.org/CorpusID:51956348}
+}
+
+@misc{3Blue1BrownYT,
+  author = {Grant Sanderson},
+  title = {3Blue1Brown Youtube Channel},
+  year = {2023},
+  howpublished = "\url{https://www.youtube.com/3blue1brown}",
+  note = {Accessed on 4 October 2023}
+}
+
+@inproceedings{Rogers2002InteractionDesign,
+  title={Interaction Design: Beyond Human-Computer Interaction},
+  author={Yvonne Rogers and Helen Sharp and Jennifer Preece},
+  year={2002},
+  url={https://api.semanticscholar.org/CorpusID:61037268}
+}
+
+@Article{active_learning_review,
+AUTHOR = {Hartikainen, Susanna and Rintala, Heta and Pylväs, Laura and Nokelainen, Petri},
+TITLE = {The Concept of Active Learning and the Measurement of Learning Outcomes: A Review of Research in Engineering Higher Education},
+JOURNAL = {Education Sciences},
+VOLUME = {9},
+YEAR = {2019},
+NUMBER = {4},
+ARTICLE-NUMBER = {276},
+URL = {https://www.mdpi.com/2227-7102/9/4/276},
+ISSN = {2227-7102},
+ABSTRACT = {Active learning has gained growing political, instructional, and research interest. However, the definitions of active learning are wide. The learning outcomes related to it have been mostly positive but the measurement methods are not without problems. This review provides an overview of active learning, especially in the context of engineering higher education, by answering two research questions: (1) How is the concept of active learning defined and justified in engineering higher education research? (2) What are the learning outcomes connected to active learning and how is learning measured in engineering higher education research? Sixty-six empirical articles were analyzed inductively with qualitative content analysis. The analysis showed that active learning was defined in various ways, and in some articles, it was not defined at all. In addition, justification (theoretical or empirical) for the use of active learning was seldomly reported. Finally, the indicators used to measure the impact of active learning on students&rsquo; learning outcomes were mostly based on students&rsquo; self-report data and focused on course specific development in subject-related knowledge. More thorough descriptions and theoretical justifications, as well as the consideration of learning outcomes with appropriate research methods, could reinforce the transparency of empirical interventions and the application of active learning.},
+DOI = {10.3390/educsci9040276}
+}
+
+@article{meegaplus,
+  title={MEEGA+: A method for the evaluation of educational games for computing education},
+  author={Petri, Giani and von Wangenheim, Christiane Gresse and Borgatto, Adriano Ferreti},
+  journal={INCoD--Brazilian Institute for Digital Convergence},
+  pages={1--47},
+  year={2018}
 }
