--- a/Tesis/conclu.tex
+++ b/Tesis/conclu.tex
@@ -1,27 +1,10 @@
 \chapter{Conclusión}
 
-\lipsum[130-132]
-\begin{figure}
-	\centering
-	\includegraphics[scale=.2]{imagenes/fcfm.pdf}
-	\caption{Logo de la Facultad}
-	\label{logofcfm}
-\end{figure}
+El videojuego cumple el propósito de enseñar el algoritmo de BFS y DFS en base a los resultados. Estudiantes que están iniciando en la carrera de computación en la Universidad de Chile fueron capaces de responder correctamente una prueba y entender la diferencia entre los algoritmos y de BFS y DFS, así cómo entender qué es un grafo.
 
-\lipsum[133-134]
+Por otra parte, el juego posee una aprobación positiva y es considerado, según el modelo MEEGA+ \cite{meegaplus}, un juego de calidad % TODO: Comprobar.
+Se identificaron un conjunto de mejoras para realizar al proceso que están mencionadas en el capítulo de discusiones de este trabajo. Sin embargo, no queda esclarecido qué debilidades específicas puede puede tener esta metodología, puede que existan conceptos que no son capturados por parte de los estudiantes en este videojuego, o conceptos que son capturados erróneamente.
 
-\begin{table}
-	\centering
-	\caption{Tabla 1}
-	\label{tabla:1}
-	\begin{tabular}{|c|c|r|}
-		\hline
-		\textbf{Campo 1} & \textbf{Campo 2} & \textbf{Num} \\\hline
-		Valor 1a & Valor 2a & 3\\
-		Valor 1b & Valor 2b & 3\\
-		\hline
-	\end{tabular}
+Se considera positivo que el videojuego sea percibido de buena manera por parte del estudiantado, puesto que esto afecta positivamente la motivación, lo cual a su vez mejora los resultados académicos, incluso si el videojuego no es un medio eficiente de aprendizaje, al menos puede constituir un complemento en la educación de la computación.
 
-\end{table}
-
-\lipsum[135]
+Se recomienda investigar más sobre este tipo de trabajos aplicando las sugerencias señaladas. Se necesita investigar más para entender de qué manera afecta el diseño de un videojuego, la narrativa, los efectos visuales y auditivos, la percepción subjetiva y el rendimiento académico en los estudiantes que aprendan con este videojuego.
