--- a/Tesis/discusion.tex
+++ b/Tesis/discusion.tex
@@ -12,13 +12,33 @@
 % Y que se hizo énfasis en la metolodogía de: línea de código o instrucción con un correlato de acción por parte del jugador
 % en el videojuego.
 
+
 \section{Fortalezas de la metodología aplicada}
 
-\section{Debilidades de la metodología aplicada}
 
-\section{Mejoras en una experiencia futura}
+
+\section{Debilidades y mejoras para la metodología aplicada}
+
+Una debilidad identificada es que la prueba académica falló en detectar diferencias entre los grupos, al asignarle un puntaje perfecto a todos los estudiantes. Se proponen dos metodologías para mejorar la precisión de los resultados: 1.- Aplicar A/B testing, comparando la metodología del videojuego educativo con otra aplicación, o la lectura de un artículo relacionado a la misma materia que busca enseñar el videojuego. Luego, probar a los estudiantes con algún examen escrito que contenga más preguntas, de manera que se pueda establecer una graduación y hacer una comparación directa entre distintos métodos de educación. 2.- El caso ideal sería tomar una muestra aleatoria de estudiantes que estén cursando Algoritmos y Estructuras de Datos y mostrarles el videojuego. Posterior a un examen, medir las diferencias entre el grupo que probó el videojuego y el grupo que no lo hizo. Sin embargo, para esto se requiere apoyo institucional y asegurarse de que se vea la materia de grafos en el curso. 
+
+El trabajo hecho no mide una componente social asociada al videojuego. Esta se descartó por dificultades en la aplicación de las pruebas de usuario y porque era difícil implementar a nivel de diseño una componente social en el videojuego que esté justificada desde el punto de vista del usuario. El modelo MEEGA+ \cite{meegaplus} busca evaluar también una componente social.
+
+No se puede asegurar la heterogeneidad de la muestra. De partida, existe el sesgo del voluntario. El sesgo del voluntario afecta de acuerdo a \cite{}. Lo ideal, sería hacer una separación aleatoria en los cursos. % CITAR TODO
+Por otra parte, existe el sesgo de novedad. % CITAR
+
+Además, autores como %CITAR LIBRO WILEY% mencionan que es mejor hacer una prueba dos semanas después para medir aprendizajes. Sin embargo, esto era difícil de realizar dadas las condiciones del trabajo, puesto que fue difícil conseguir voluntarios en un contexto donde los estudiantes prefieren dedicar su tiempo a preparar exámenes en vez de participar en una actividad universitaria.
+
+Por otra parte, el autor de este trabajo no es un diseñador de videojuegos y su principal énfasis está en la programación. Se destaca el rol y la importancia del diseño del videojuego. Este tiene que ser atractivo, interesante y ofrecer más mecánicas que recompensen al jugador, como agregarle una dimensión social a través de un ranking, componentes cooperativas o competitivas. La narrativa tampoco es acabada, no es una historia que lleve un fin y no se presenta un desarrollo de personaje. Tampoco se presenta un antagonista.
 
 \section{Trabajo futuro}
 
+% Poner aquí ideas locas que había comenzado a anotar con Jeremy 
 
+En un futuro, esta misma aplicación o derivaciones de esta podrían probarse en otros contextos, con muestras más grandes, para asegurar de mejor manera la validez estadística. Por otra parte, se recomienda utilizar un diseño experimental que deje de lado sesgos como el factor de novedad y el sesgo del voluntario. Además, se recomienda medir en distintos intervalos temporales los resultados del aprendizaje al utilizar esta aplicación. Por último, esta aplicación fue creada con la intención de ser un complemento a la enseñanza tradicional y usarse en pausas activas, por lo que también se sugiere estudiarla en grupos donde se utilizó esta herramienta como complemento y compararla con otro grupo que no la haya utilizado.
 
+Una mejora en la recolección de datos es aplicar principios de telemetría y uso de otras tecnologías que permitan profundizar el estudio de usabilidad y experiencia de usuario. Ejemplos de estas tecnologías son eye-tracking o biofeedback. Esto permitiría entender mejor y de una forma más estandarizada cómo experimentan los usuarios el videojuego y dónde hay espacio de mejora. Por ejemplo, se espera que los usuarios vean el cód igo cada vez que realizan un paso, lo que podría verificarse utilizando eye-tracking. 
+
+Una posible expansión a este trabajo es usar otras estructuras de datos y otros algoritmos que no necesariamente tengan relación con los grafos. El software creado está hecho para ser extendible a otros algoritmos. Eso sí, esto requeriría trabajo de diseño, para determinar cómo serán las visualizaciones y representaciones de los algoritmos, así como las mecánicas.
+
+A nivel de diseño de juego, podrían agregarse más elementos de gamificación, como adquisión de nuevos elementos, desbloqueo de mecánicas, acumulación de puntos, establecimiento de un ranking global, sistema de logros y finales alternativos.
+% TODO BUSCAR CITA
