--- a/Tesis/main.tex
+++ b/Tesis/main.tex
@@ -4,7 +4,7 @@
 
 \depto{Departamento de Ciencias de la Computación}
 \author{Alonso Utreras Miranda}
-\title{IGASCE: Un videojuego educativo para enseñar algoritmos relacionados a grafos a estudiantes de universidad}
+\title{IGASCE: Un videojuego educativo para enseñar algoritmos relacionados a grafos a estudiantes de Ciencias de la Computación}
 
 % incluir ambos comandos para una doble titulación
 %  o quitar el comando que no aplica
@@ -91,5 +91,9 @@ A mi abuelo, que siempre me apoyó en mis estudios.
 % opcional ...
 \begin{appendices}
 \input{anexoA.tex}
+\input{anexoB.tex}
+\input{anexoC.tex}
+\input{anexoD.tex}
+\input{anexoE.tex}
 \end{appendices}
 \end{document}
