--- a/Tesis/metodologia.tex
+++ b/Tesis/metodologia.tex
@@ -1,9 +1,45 @@
-\section{Diseño experimental}
+\chapter{Diseño experimental: Metodología}
+
+El objetivo de este trabajo era poner a prueba las hipótesis de que un videojuego educativo puede enseñar algoritmos relacionados a grafos, y que puede mantener a los estudiantes motivados y enfocados en la tarea que se les pide realizar. 
+
+La forma de comprobar tales hipótesis es mediante un experimento donde se le pide a personas voluntarias responder ciertas preguntas después de probar la aplicación.
+
+\section{Fases del trabajo de investigación}
+
+El trabajo se dividió en tres fases, las cuales constaron de distintas preguntas después de probar la aplicación.
 
 \subsection{Fase exploratoria}
 
-\subsection{Medición de resultados académicos}
+En esta primera fase se buscaba acumular retroalimentación y opiniones de usuarios de la forma más libre posible, utilizando metodologías de loud thinking con usuarios experimentados en grafos. Las razones por las cuales se usó esta metodología son las siguientes.
 
-\subsection{B testing}
+Si un usuario conoce el algoritmo y la estructura de datos, pero no entiende el videojuego, entonces hay problemas de usabilidad, por lo que se justifica partir con gente experta.
+
+Usuarios expertos pueden expresarse con más naturalidad cuando saben que no les espera un formulario al final y procuran guardar menos sus opiniones en el momento, por lo que se prefirió no dejar no utilizar una encuesta o escala post experiencia.
+
+Se considera importante que los usuarios retraten sus impresiones a medida que los elementos del videojuego aparecen en pantalla y no después a la experiencia, para saber de mejor manera qué siente la persona cuando usa la aplicación por primera vez. Hay animaciones que deben llamar la atención en el momento, como la pista visual del ratón indicándole al usuario que haga click izquierdo en un planeta.
+
+Se acabó con esta fase una vez los resultados de las pruebas de usuario mejoraron y se observó que cinco usuarios expertos pudieron terminar la prueba de inicio a fin sin estancarse. La condición es que estos usuarios no podían conocer el juego previamente. 
+
+
+\subsection{Fase de evaluación académica y percepción de usuario}
+
+Se consiguió una muestra de 15 personas que participaron en esta fase de principio a fin.
+
+Para iniciar esta fase, se hizo un llamado voluntario en el foro de las secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante el semestre de primavera del año 2023. Se ofreció remuneración a todas las personas que completaran la experiencia. La experiencia duraba 45 minutos en promedio y consistía en tres partes: Realizar la prueba de usuario, llenar un formulario basado en el modelo MEEGA+ \cite{meegaplus} y responder la prueba escrita. % Revisar si digo que el formulario está basado en la METODOLOGÍA? UTILIZA? ES DEL TIPO?
+
+El modelo sistemático MEEGA+ \cite{meegaplus} está hecho para evaluar videojuegos educativo, el cual busca evaluar la percepción de la calidad de un videojuego desde la perspectiva del estudiante en el contexto de la enseñanza de la computación.  El formulario utilizado en este estudio, basado en MEEGA+ \cite{meegaplus} se encuentra en el anexo \ref{Anexomeegaplus}.
+
+La medición de rendimiento académico se hace a través de una prueba escrita con dos preguntas, basadas en una pregunta de un examen del ramo de Algoritmos y Estructuras de Datos de la misma facultad. La prueba escrita se encuentra en el anexo \ref{AnexoPruebaEscrita}.
+% PONER REFERENCIA ACÁ AL ANEXO. VER CÓMO INCLUIR LA PRUEBA EN EL PDF. TODO.
 
 \subsection{Trabajo y encuesta libre}
+
+% Anotar aquí antes de que termine la tesis cuánta gente fue en total.
+
+Para ampliar el estudio y aumentar el tamaño muestral, se realizó una tercera experiencia abierta a todo público que supiera programar. Se envió una invitación en distintas comunidades de videojuegos a probar el juego educativo y llenar el formulario. Como las experiencias podían variar de gran manera en este trabajo, se agregó una pregunta que pregunta por el nivel de experiencia en programación, para permitir la segmentación. El formulario utilizado también corresponde al modelo MEEGA+. Los resultados se anotaron aparte de la fase anterior.
+
+
+% \subsection{Marco teórico que justifica la metodología}
+
+% Hablar aquí de MEEGA+, su metodología, por qué funciona lo que hicimos
+% Quizás poner una adaptación del cálculo de un buen juego
