--- a/Tesis/resultados.tex
+++ b/Tesis/resultados.tex
@@ -1,2 +1,11 @@
 \chapter{Resultados}
 
+\subsection{Prueba académica}
+
+Las 15 personas que hicieron la prueba tuvieron ambas respuestas correctas, identificando correctamente el recorrido BFS y DFS en cada caso.
+
+
+\subsection{Formulario MEEGA+: Percepción de usuario}
+
+% Hablar de la suma de puntaje y puntaje promedio para los dos casos: De fase exploratoria y fase posterior.
+
