--- a/Tesis/anexoA.tex
+++ b/Tesis/anexoA.tex
@@ -1,2 +1,39 @@
-\chapter{Anexo}
+\chapter{Anexo A: Formulario basado en MEEGA+} \label{AnexoA}
 
+
+\begin{table}[]
+\label{TablaFormularioMEEGA}
+\begin{tabular}{|c|l|} % borde | columna fuente centrada | borde | columna fuente a la izq | 
+\hline % Linea horizontal inicial
+\textbf{Notación} & \textbf{Pregunta} \\\hline % Separa el inicio
+Q1       & El diseño de juego es atractivo \\ 
+Q2       & La fuente de texto y los colores están bien combinados y son consistentes \\
+Q3       & Tuve que aprender cosas antes de poder jugar \\
+Q4       & Aprender a jugar se me hizo fácil \\
+Q5       & Las reglas del juego son claras y fáciles de entender \\
+Q6       & Las fuentes (su tamaño y estilo) usadas son fáciles de leer \\
+Q7       & Los colores usados en el juego son significativos \\
+Q8       & Cuando vi el juego por primera vez, tuve la sensación de que sería fácil para mí \\
+Q9       & La estructura me ayudó a tener confianza en que aprendería con este juego \\
+Q10      & Este juego es desafiante en la medida justa \\
+Q11      & El juego ofrece nuevos desafíos a un ritmo adecuado \\
+Q12      & El juego no se vuelve monótomo a medida que se avanza \\
+Q13      & Completar las tareas del juego me provocó satisfacción \\
+Q14      & Pude avanzar en el juego gracias a mi esfuerzo personal \\
+Q15      & Siento satisfacción con lo aprendido en este juego \\
+Q16      & Recomendaría este juego a mis colegas \\
+Q17      & Me entretuve con el juego \\
+Q18      & Algún elemento del juego me hizo sonreír \\
+Q19      & Había algo interesante al inicio del juego que llamó mi atención \\
+Q20      & Estaba tan envuelt@ en la tarea propuesta por el juego que perdí la noción del tiempo \\
+Q21      & Me olvidé de mi entorno físico mientras jugaba \\
+Q22      & Los contenidos del juego son relevantes para mis intereses \\
+Q23      & Es claro ver que los contenidos del juego se relacionan a cierta materia de la carrera \\
+Q24      & Este juego es adecuado para enseñar el contenido \\
+Q25      & Prefiero aprender con este juego en vez de aprender con otros métodos de enseñanza \\
+Q26      & El juego contribuyó a mi aprendizaje \\
+Q27      & El juego me permitió aprender de forma eficiente en comparación con otras actividades \\
+\hline
+\caption{Formulario basado en MEEGA+. Se eliminó la dimensión social y no se incluyeron los ítems que preguntan por los objetivos particulares del juego.}
+\end{tabular}
+\end{table}
