--- a/Tesis/trabajo_relacionado.tex
+++ b/Tesis/trabajo_relacionado.tex
@@ -7,7 +7,7 @@ Los videojuegos serios (Serious Gaming) son una forma de aprendizaje activo. Un 
 
 Bell y Gibson \cite{evaluation_of_games_for_teaching_cs} identificaron y clasificaron videosjuegos de Ciencias de la Computación (CS), considerando un total de 41 videojuegos. Uno de ellos, Map Coloring, se trata sobre grafos, tomando el tema de coloreo de grafos. Se realizó una búsqueda del juego a la fecha (2022), pero no se encontró ningún material al respecto.
 
-Kiili y su equipo \cite{using_videogames_maths} analizaron el uso de videojuegos en enseñanza y evaluación en matemáticas a través de los títulos "Semideus" y "Wuzzit Trouble". A través de estos, llegaron a la conclusión de que es posible utilizar videojuegos para enseñar y evaluar al mismo tiempo. Además, caracterizaron estadísticamente las diferencias producidas por el uso de videojuegos entre resultados de un pre test y un post test.
+Kiili y su equipo \cite{using_videogames_maths} analizaron el uso de videojuegos en enseñanza y evaluación en matemáticas a través de los títulos ``Semideus'' y "Wuzzit Trouble". A través de estos, llegaron a la conclusión de que es posible utilizar videojuegos para enseñar y evaluar al mismo tiempo. Además, caracterizaron estadísticamente las diferencias producidas por el uso de videojuegos entre resultados de un pre test y un post test.
 
 En el trabajo realizado por Zhao y Shute \cite{video_game_foster_computational_thinking} se enumeran ejemplos de videojuegos pensados para enseñar programación, tales como Wu's Castle \cite{wuscastle}, CodeCombat \cite{CodeCombat}, CodeSpell \cite{codespells}, MiniColon \cite{minicolon}, tales ejemplos utilizan programación con texto. Sin embargo, también hay numerosos ejemplos que utilizan programación por bloques, como LightBot \cite{LightBot}, Scratch \cite{maloney2010scratch}, \cite{scratch} y RoboBuilder \cite{RoboBuilder}, los cuales abstraen el trabajo de aprender una sintaxis relacionada a los lenguajes de programación.
 
